WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313642
REGRESSION (
312195@main
): ServiceWorkerProcessSwapWithNoDelay and WindowClientNavigate API tests failing
https://bugs.webkit.org/show_bug.cgi?id=313642
Summary
REGRESSION (312195@main): ServiceWorkerProcessSwapWithNoDelay and WindowClien...
Chris Dumez
Reported
2026-04-29 05:31:25 PDT
ServiceWorker.ServiceWorkerProcessSwapWithNoDelay and ServiceWorker.WindowClientNavigate API tests are flakily failing since
312195@main
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-04-29 05:33:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63889
EWS
Comment 2
2026-04-29 07:24:56 PDT
Committed
312279@main
(b95b9b255ec4): <
https://commits.webkit.org/312279@main
> Reviewed commits have been landed. Closing PR #63889 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-29 07:25:12 PDT
<
rdar://problem/175852101
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug